[package]
name = "fibonacci-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ministark = { git = "https://github.com/andrewmilson/ministark" }
gpu-poly = { git = "https://github.com/andrewmilson/ministark" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
pollster = "0.2.4"

[features]
default = [ "asm" ]
gpu = [ "ministark/gpu" ]
asm = [ "ministark/asm" ]
parallel = [ "ministark/parallel" ]